Fix MAL List.of() varargs for >10 elements and split test class by scope (#13746)
**Bug**: Javassist cannot resolve `List.of()` varargs overload for >10 elements (JDK 11 only has fixed-arity overloads for 0–10). MAL expressions with `sum()` over 12 label keys (e.g., serviceRelation histogram percentile rules) fail to compile.

**Fix**: Changed `StringListArgument` and `NumberListArgument` codegen from `List.of(...)` to `Arrays.asList(new T[]{...})`, which works for any number of elements.

**Test refactoring**: Split `MALClassGeneratorTest` (41 tests) into 3 classes by scope:
- `MALClassGeneratorTest` (18) — basic compilation, error handling, bytecode verification
- `MALClassGeneratorClosureTest` (14) — tag/forEach closures, regex, network-profiling patterns
- `MALClassGeneratorScopeTest` (9) — full-expression scope tests (endpoint, service, instance, serviceRelation)

All 68 tests pass.